When a package has multiple versions, display a version selector on the docs page to jump between versions (Fixes #9)

--- a/resources/sass/pages/_package-docs.scss
+++ b/resources/sass/pages/_package-docs.scss
@@ -33,4 +33,8 @@
   &__content {
     grid-area: content;
   }
+
+  &__version-selector {
+    padding-bottom: .75rem;
+  }
 }
